public_html/styles-main/main-style.css
/*Body background*/
body {
    background-color: #ffebcc;
}

/*Wrapper*/
.container {
    margin: auto;
}

.no-padding {
    padding: 0 !important;
}

/*Navigation Bar container*/
.container-fluid {
    padding: 1rem;
}

/*Navigation Bar titles/links*/
.navbar-expand-md .navbar-nav .nav-link {
    color: darkorange;
    padding-left: 2rem;
    padding-right: 2rem;
    font-family: "sans-serif";
    font-weight: bold;
}

/*Navigation Bar brand: "Patanjali ૐ Yogini" title*/
.navbar-dark .navbar-brand {
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 1.5em;
    padding-left: 2rem;
}

/*Lord Ganesha Section Parallax*/
.parallax {
    background-image: url(../images/Ganesha.jpg);
    height: 950px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border-bottom: 8px double darkorange;
}

.top-heading h1 {
    color: darkorange;
    font-weight: bold;
    text-align: right;
    font-size: 2.5em;
    padding-top: 18em;
    padding-right: 1em;
    font-style: italic;
}

/*Section-1: Quote-1 "Yoga Chittavritti Nirodha"*/
.container-fluid-quote-1 {
    background-color: lightblue;
    width: 100%;
    border-top: 8px dotted darkorange;
    border-bottom: 8px double darkorange;
}

.container-fluid-quote-1 p {
    text-align: center;
    font-family: Abhya l;
    font-weight: bold;
    color: white;
    font-size: 1.5em;
    display: block;
    margin-top: 25px;
    margin-bottom: 25px;
}

/*Section-2 "India" image and quote-2*/
.section-2 {
    border-top: 8px dotted darkorange;
    border-bottom: 8px double darkorange;
}

img[src="images/quote-2.png"] {
    border-top: 8px dotted darkorange;
    border-bottom: 8px double darkorange;
}

/*Section-3*/
.section-3 {
    background-color: lightblue;
    padding-bottom: 15px;
    border-top: 8px dotted darkorange;
    border-bottom: 8px double darkorange;
}

.section-3 h1 {
    text-align: center;
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 1.5em;
    padding-top: 15px;
}

.section-3 h5 {
    text-align: center;
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 1.5em;
}

.card-img-top {
    width: auto;
    height: auto;
}

.card {
    box-shadow: 0 0 5px 0 rgba(22, 22, 26, .25);
    /*height:498px;
    width: 449.2px;*/
    display: flex;
    justify-content: center;
    padding: 15px;
    margin-left: auto;
    margin-right: auto;
}

.card-text {
    text-align: center;
    color: black;
    font-size: 1em;
    margin: auto;
    font-family: sans-serif;
}

/*Section-4*/
.section-4 {
    background-color: navajowhite;
    border-bottom: 8px double darkorange;
    border-top: 8px dotted darkorange;
    text-align: center;
}

.section-4 h1 {
    padding-top: 15px;
}

.section-4 .rounded-circle {
    border: 3px solid white;
    margin-top:15px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.section-4 .about-me p {
    text-align: center;
    padding-top: 15px;
    padding-left: 25px;
    padding-right: 25px;
    font-family: sans-serif;
}

.section-4 .about-me a:hover {
    background-color: darkorange;
    font-family: sans-serif;
}

/*Section-5*/
.section-5 {
    background-color: lightblue;
    border-top: 8px dotted darkorange;
}

.section-5 .container-fluid .greeting {
    text-align: center;
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 2.5em;
    margin-top: 15px;
    padding: 15px;
}

h1 {
    text-align: center;
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 1.5em;
    padding-top: 15px;
}

.section-5 .form-control {
    width: 65%;
}

.section-5 .form-contact {
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}

.section-5 .button-message {
    margin-top: 15px;
    margin-bottom: 15px;
    background-color: darkorange;
    color: white;
    border: 1px solid white;
}

.section-5 .button-message:hover {
    background-color: lightseagreen;
}

/*Footer Section*/
.footer-container p {
    color: darkorange;
    font-weight: bold;
    font-style: italic;
    font-size: 1.5em;
    text-align: center;
    padding: 0.1rem;
}

